--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
                 <button>u</button> <button>v</button> <button>w</button> <button>x</button>
                 <button>y</button> <button>z</button> 
             </div>
+            <div class="difficulty-buttons">
+                <h3>Choose Difficulty</h3>
+                <button class="difficulty-button" id="easy">Easy</button>
+                <button class="difficulty-button" id="medium">Medium</button>
+                <button class="difficulty-button" id="difficult">Difficult</button>
+            </div>        
         </div>
     </div>
     
