--- a/index.html
+++ b/index.html
@@ -33,17 +33,16 @@
             </ul>
 
             <!-- display of questions -->
-            <ul id="questionsList">
+            <center><ul id="questionsList" style="padding: 15px; font-size: 20px; font-weight: bold;">
                 <!-- Questions will be added dynamically using JavaScript -->
             </ul>
             <input type="text" id="user-answer" placeholder="Type your answer here" onkeydown="checkEnter(event)">
-            <button onclick="nextQuestion()">Next Question</button>
 
             <!-- number of guesses -->
-            <h4 class="guesses-text">
+            <h5 class="guesses-text" style="padding: 10px;">
                 Incorrect guesses:
                 <b class="guesses-count">0 / 3</b>
-            </h4>
+            </h4></center>
 
             <!-- keyboard -->
             <div class="keyboard">
@@ -62,7 +61,14 @@
                 <button class="difficulty-button" onclick="selectDifficulty('easy')">Easy</button>
                 <button class="difficulty-button" onclick="selectDifficulty('medium')">Medium</button>
                 <button class="difficulty-button" onclick="selectDifficulty('hard')">Hard</button>
-            </div>        
+            </div>
+
+            <!--button for hint-->
+            <div class="difficulty-buttons">
+                <h4>Hints</h4>
+                <button class="difficulty-buttons" onclick="isVowel()">Vowels</button>
+                
+            </div>
         </div>
     </div>
 
